Implemented Order Manager Service and decoupled the dependency through direct api calls
