# docs/swagger.yaml
@@ -1,25 +1,10 @@
 definitions:
-  fiber.Error:
+  github_com_gofiber_fiber_v2.Error:
     properties:
       code:
         type: integer
       message:
         type: string
-    type: object
-  model.Cart:
-    properties:
-      cartItems:
-        items:
-          $ref: '#/definitions/model.CartItem'
-        type: array
-      id:
-        type: integer
-      user:
-        allOf:
-        - $ref: '#/definitions/model.User'
-        description: Foreign key constraints
-      userID:
-        type: integer
     type: object
   model.CartCreateRequest:
     properties:
@@ -32,21 +17,6 @@ definitions:
     required:
     - cart_items
     - user_id
-    type: object
-  model.CartItem:
-    properties:
-      discount:
-        type: integer
-      id:
-        type: integer
-      product:
-        allOf:
-        - $ref: '#/definitions/model.Product'
-        description: Foreign key constraints
-      productID:
-        type: integer
-      quantity:
-        type: integer
     type: object
   model.CartItemRequest:
     properties:
@@ -67,8 +37,6 @@ definitions:
         type: integer
       discount:
         type: integer
-      product:
-        $ref: '#/definitions/model.Product'
       product_id:
         type: integer
       quantity:
@@ -84,9 +52,6 @@ definitions:
         type: array
       user_id:
         type: integer
-    required:
-    - cart_items
-    - user_id
     type: object
   model.CartUpdateRequest:
     properties:
@@ -113,7 +78,7 @@ definitions:
   model.OrderResponse:
     properties:
       cart:
-        $ref: '#/definitions/model.Cart'
+        $ref: '#/definitions/model.CartResponse'
       cart_id:
         type: integer
       order_id:
@@ -125,32 +90,6 @@ definitions:
         type: integer
       order_id:
         type: integer
-    type: object
-  model.Product:
-    properties:
-      brand:
-        type: string
-      category:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-      subCategory:
-        type: string
-    type: object
-  model.User:
-    properties:
-      email:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-      passwordHash:
-        type: string
-      username:
-        type: string
     type: object
 info:
   contact: {}
@@ -188,7 +127,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Get All Carts
       tags:
       - Carts
@@ -213,11 +152,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Create a New Cart
       tags:
       - Carts
@@ -240,7 +179,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Delete a Cart
       tags:
       - Carts
@@ -264,11 +203,11 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Get Cart by ID
       tags:
       - Carts
@@ -298,15 +237,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Update an Existing Cart
       tags:
       - Carts
@@ -327,7 +266,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Get All Orders
       tags:
       - Orders
@@ -352,11 +291,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Create a New Order
       tags:
       - Orders
@@ -379,7 +318,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Delete a Order
       tags:
       - Orders
@@ -403,11 +342,11 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Get Order by ID
       tags:
       - Orders
@@ -437,15 +376,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/fiber.Error'
+            $ref: '#/definitions/github_com_gofiber_fiber_v2.Error'
       summary: Update an Existing Order
       tags:
       - Orders
