# orders/model/dependentmodels.go
@@ -1,0 +1,17 @@
+package model
+
+type UserResponse struct {
+	ID       uint   `json:"user_id"`
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Username string `json:"user_name"`
+}
+
+type ProductResponse struct {
+	ID          uint   `json:"product_id"`
+	Name        string `json:"product_name"`
+	Brand       string `json:"brand"`
+	Category    string `json:"category"`
+	SubCategory string `json:"sub_category"`
+	Price       uint   `json:"price"`
+}
